listyoursvm begin with reading database

--- a/views/pages/cyber.ejs
+++ b/views/pages/cyber.ejs
@@ -30,7 +30,7 @@
                 </a>
             </div>
             <div class="text-white">
-                <a href="/signup">
+                <a href="/listvmdata">
                   <button type="button" class="btn btn-outline-success btn-lg font-weight-bold" style="height: 80px ; font-size: 150%" >List yours virtual machines</button>
                 </a>
             </div>
