--- a/views/pages/createvm.ejs
+++ b/views/pages/createvm.ejs
@@ -11,46 +11,7 @@
     <title>Create vm</title>
   </head>
   <body>
-    <!-- <h1>Create vm</h1>
 
-    <form action="addvm" method="POST">
-    Select Operating System:<br>
-    <select>
-        <option value="Ubuntu 16.04 LTS">Ubuntu 16.04 LTS</option>
-        <option value="Windows 10">Windows 10</option>
-        <option value="Debian">Debian</option>
-        <option value="Linux">Linux</option>
-      </select>
-      <br>
-
-     Quantity:<br>
-      <select>
-          <option value="Ubuntu 16.04 LTS">Ubuntu 16.04 LTS</option>
-          <option value="Windows 10">Windows 10</option>
-          <option value="Debian">Debian</option>
-          <option value="Linux">Linux</option>
-        </select>
-        <br>
-  
-
-      Ram memory:<br>
-      <select>
-          <option value="1">1 GB</option>
-          <option value="2">2 GB</option>
-        </select>
-        <br>
-
-        Hard disk memory:<br>
-        <select>
-            <option value="20">20 GB</option>
-            <option value="40">40 GB</option>
-          </select>
-          <br>
-
-        Name for vm (number added at the end of the name if there are more than 1 vm):<br>
-          <input type="text" name="vmname" placeholder="vmname">
-          <br>
-      </form> -->
 
       <body style="background-color: orange">
 
@@ -71,7 +32,7 @@
                                     <form action ='/addvm' class="form" role="form" autocomplete="off" id="formLogin" novalidate="" method="POST">
                                         <div class="form-group">
                                             <label for="uname1">Select Operating System</label>
-                                            <select required>
+                                            <select name="os" required>
                                               <option value="Ubuntu 16.04 LTS">Ubuntu 16.04 LTS</option>
                                               <option value="Windows 10">Windows 10</option>
                                               <option value="Debian">Debian</option>
@@ -89,26 +50,26 @@
                                         </div>
                                         <div class="form-group">
                                           <label>Ram memory</label>
-                                          <select required>
+                                          <select name="ramquantity" required>
                                             <option value="1">1 GB</option>
                                             <option value="2">2 GB</option>
                                           </select>        
                                       </div>
                                       <div class="form-group">
                                         <label>Hard disk memory</label>
-                                        <select required>
+                                        <select name="harddisk" required>
                                           <option value="20">20 GB</option>
                                           <option value="40">40 GB</option>
                                         </select>        
                                     </div>
                                     <div class="form-group">
                                       <label>Name for vm (number added at the end of the name if there are more than 1 vm)</label>
-                                      <input type="password" class="form-control form-control-lg rounded-0" id="pwd1" required="" placeholder="Computer's name" autocomplete="new-password">
+                                      <input name="namevm" class="form-control form-control-lg rounded-0" id="pwd1" required="" placeholder="Computer's name" autocomplete="new-password">
                                       <div class="invalid-feedback">Enter your password !</div>
                                     </div>
                                     <div class="form-group">
                                         <label>Description : Why do you install this virtual machine?</label>
-                                        <textarea name="description" rows="4" cols="50" placeholder="Why are you using VM-Giver?" required></textarea>
+                                        <textarea name="reasonofvm" rows="4" cols="50" placeholder="Why are you using VM-Giver?" required></textarea>
                                       </div>
                                     <div class="form-group form-check">
                                         <label class="form-check-label">
