--- a/views/pages/cyber.ejs
+++ b/views/pages/cyber.ejs
@@ -31,6 +31,7 @@
             </div>
             <div class="text-white">
                 <a href="/listvmdata">
+                <!-- <a href="/testvar"> -->
                   <button type="button" class="btn btn-outline-success btn-lg font-weight-bold" style="height: 80px ; font-size: 150%" >List yours virtual machines</button>
                 </a>
             </div>
