--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -30,12 +30,12 @@
                                   <form action ='/checklogin' class="form" role="form" autocomplete="off" id="formLogin" novalidate="" method="POST">
                                       <div class="form-group">
                                           <label for="uname1">Username</label>
-                                          <input type="text" class="form-control form-control-lg rounded-0" name="uname1" id="uname1" placeholder="Username" required="">
+                                          <input name=username type="text" class="form-control form-control-lg rounded-0" name="uname1" id="uname1" placeholder="Username" required="">
                                           <div class="invalid-feedback">You have to complete here</div>
                                       </div>
                                       <div class="form-group">
-                                          <label>Name for vm (number added at the end of the name if there are more than 1 vm)</label>
-                                          <input type="password" class="form-control form-control-lg rounded-0" id="pwd1" required="" placeholder="Password" autocomplete="new-password">
+                                          <label>Password</label>
+                                          <input name=password type="password" class="form-control form-control-lg rounded-0" id="pwd1" required="" placeholder="Password" autocomplete="new-password">
                                           <div class="invalid-feedback">Enter your password !</div>
                                       </div>
                                       <div>
